<resources>
    <string name="app_name">DoctorJIYO</string>

    <string name="facebook_app_id">652633305543097</string>
    <string name="fb_login_protocol_scheme">fb652633305543097</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose">Choose</string>


    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>

    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>

    <string name="GOT_IT">GOT IT</string>
    <string name="NEXT">NEXT</string>
    <string name="terms_amp_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="privacy_amp_policy"><u>Privacy &amp; Policy.</u></string>
    <string name="diagnosis"><u>Diagnosis</u></string>
    <string name="view">View</string>
    <string name="view_medical_record"><u>View Medical Record</u></string>
    <string name="viewrecord"><u>View</u></string>
    <string name="edit"><u>EDIT</u></string>
    <string name="prescription">Prescription</string>
    <string name="appointments">Appointments</string>
    <string name="chats">Chats</string>
    <string name="token_number_may_change_if_someone_booked_before_you">(<i>Token number may change if someone booked before you</i>)</string>
</resources>
