<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lyt_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginHorizontal="@dimen/spacing_medium">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/doc_img"
                android:layout_toRightOf="@+id/doc_img"
                android:layout_margin="@dimen/spacing_xmedium">

                <TextView
                    android:id="@+id/record_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="X Ray"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/record_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Fracture"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/bt_expand"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_expand_arrow"
                android:layout_gravity="center_vertical"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="@dimen/spacing_xmedium">

            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium_lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/createat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12/15/1212 12:20:12"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_xmedium"
            android:layout_margin="@dimen/spacing_xmedium">

            <Button
                android:id="@+id/ViewRecord"
                android:background="@color/transparent"
                android:text="@string/viewrecord"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:gravity="start|center_vertical"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/EditRecord"
                android:background="@color/transparent"
                android:text="@string/edit"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="start|center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:visibility="gone"
                android:id="@+id/doc_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_xmedium"
                app:srcCompat="@drawable/jpg"
                />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>