<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Doctor.Activity.Doctor_PatientProfile_Activity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="4dp">



        <ImageView
            android:id="@+id/close"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            app:srcCompat="@drawable/ic_chevron_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/grey_80"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Patient Proile"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            app:fontFamily="sans-serif-medium"
            android:layout_toEndOf="@+id/close"
            android:maxLines="1"
            android:minLines="1"/>



    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/photo_male_6"
                android:layout_gravity="center"/>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginVertical="@dimen/spacing_xmedium">

                <TextView
                    android:id="@+id/patientname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jayesh Shinde"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_90" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="Mumbai, Maharashtra."
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/grey_90" />




            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/chats"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/blue_500"
                    android:background="@drawable/shape_round_solid"
                    android:text="&#xf27a;"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:fontFamily="@font/fontawesome_v_5_13_0"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chats"
                    android:textColor="@color/black"
                    android:textSize="11dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/appointment"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/green_500"
                    android:background="@drawable/shape_round_solid"
                    android:text="&#xf0f1;"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:fontFamily="@font/fontawesome_v_5_13_0"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointments"
                    android:textColor="@color/black"
                    android:textSize="11dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prescription"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/orange_500"
                    android:background="@drawable/shape_round_solid"
                    android:text="&#xf5b1;"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:fontFamily="@font/fontawesome_v_5_13_0"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prescription"
                    android:textColor="@color/black"
                    android:textSize="11dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicalrecord"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/red_A200"
                    android:background="@drawable/shape_round_solid"
                    android:text="&#xf481;"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:fontFamily="@font/fontawesome_v_5_13_0"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medical Record"
                    android:textColor="@color/black"
                    android:textSize="11dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        app:tabBackground="@color/blue_300"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorHeight="@dimen/actionBarSize"
        app:tabIndicatorColor="@color/blue_500">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medical" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>